--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>furi diningrat</title>
+    <title>furi dngrt</title>
     <meta name="google-site-verification" content="OKhQst1vyqBIHZ71FLlwutmhnPrdxUD7a1Ruu2pIZbs" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection"/>
