update link sosmed

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="row section">
         <div class="col s12">
           <ul class="horizontal-list">
-            <li><a href="https://facebook.com/fury.diningrat"><i class="icon ion-logo-facebook"></i></a></li>
-            <li><a href="https://twitter.com/furidiningrat"><i class="icon ion-logo-twitter"></i></a></li>
+            <li><a href="https://facebook.com/furidngrt"><i class="icon ion-logo-facebook"></i></a></li>
+            <li><a href="https://twitter.com/furidngrt"><i class="icon ion-logo-twitter"></i></a></li>
             <li><a href="#"><i class="icon ion-logo-linkedin"></i></a></li>
             <li><a href="#"><i class="icon ion-logo-github"></i></a></li>
             <li><a href="https://instagram.com/furidngrt"><i class="icon ion-logo-instagram"></i></a></li>
