--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/css.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/pp.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon.jpg">
     <link rel="manifest" href="/images/ico/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/images/ico/ms-icon-144x144.png">
