--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link type="text/css" rel="stylesheet" href="css/css.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon.jpg">
-    <link rel="manifest" href="/images/ico/manifest.json">
+    <link rel="manifest" href="/img/ico/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/images/ico/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
   
