--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>furi dngrt</title>
+    <title>Furi Dngrt</title>
     <meta name="google-site-verification" content="OKhQst1vyqBIHZ71FLlwutmhnPrdxUD7a1Ruu2pIZbs" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection"/>
@@ -21,7 +21,7 @@
       <div class="container">
         <div class="row section">
           <div class="col s12 flow-text">
-            <h3>furi dngrt</h3>
+            <h3>Furi Dngrt</h3>
             <p><img class="responsive-img circle col s4 right" src="/img/pp.jpg"></p>
             <p>Never give up. Today is hard, tomorrow will be worse, but the day after tomorrow will be sunshine.</p>
             <p>Today, making money is very simple. But making sustainable money while being responsible to the society and improving the world is very difficult - Jack Ma</p>
