--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p><img class="responsive-img circle col s4 right" src="/img/pp.jpg"></p>
             <p>Never give up. Today is hard, tomorrow will be worse, but the day after tomorrow will be sunshine.</p>
             <p>Today, making money is very simple. But making sustainable money while being responsible to the society and improving the world is very difficult - Jack Ma</p>
-            <p>Streaming music or download music <a href="https://stfbnd.info">click here</a> enjoy.</p>
+            <p>Streaming music or download music <a href="https://stafa.rocks">click here</a> enjoy.</p>
           </div>
       </div>
       <div class="divider"></div>
