--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <div class="col s12 flow-text">
             <h3>Furi Dngrt</h3>
             <p><img class="responsive-img circle col s4 right" src="/img/pp.jpg"></p>
-            <p>Never give up. Today is hard, tomorrow will be worse, but the day after tomorrow will be sunshine.</p>
-            <p>Today, making money is very simple. But making sustainable money while being responsible to the society and improving the world is very difficult - Jack Ma</p>
-            <p>Streaming music or download music <a href="https://stafa.rocks">click here</a> enjoy.</p>
+            <p>I am a cryptocurrency enthusiast, fascinated by the revolutionary potential of blockchain technology. With a background in technology and finance, I have been exploring this decentralized world of digital currencies since 2017.</p>
+            <p>During this journey, I have been a node operator, crypto farmer, trader, and a strong advocate for using blockchain to transform global finance.</p>
+            <p>I share my knowledge through writing, consulting, and education to help others understand and use cryptocurrencies. Together, we can open the door to a more inclusive, secure, and innovative financial future.</p>
           </div>
       </div>
       <div class="divider"></div>
