--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container">
         <div class="row section">
           <div class="col s12 flow-text">
-            <h3>Furi Dngrt</h3>
+            <h3>furi dngrt</h3>
             <p><img class="responsive-img circle col s4 right" src="/img/pp.jpg"></p>
             <p>I am a cryptocurrency enthusiast, fascinated by the revolutionary potential of blockchain technology. With a background in technology and finance, I have been exploring this decentralized world of digital currencies since 2017.</p>
             <p>During this journey, I have been a node operator, crypto farmer, trader, and a strong advocate for using blockchain to transform global finance.</p>
