--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/css.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/fav.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/fav.png">
     <link rel="manifest" href="/img/ico/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/img/fav.jpg">
+    <meta name="msapplication-TileImage" content="/img/fav.png">
     <meta name="theme-color" content="#ffffff">
   </head>
   
