--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="https://facebook.com/furidngrt"><i class="icon ion-logo-facebook"></i></a></li>
             <li><a href="https://twitter.com/furidngrt"><i class="icon ion-logo-twitter"></i></a></li>
             <li><a href="#"><i class="icon ion-logo-linkedin"></i></a></li>
-            <li><a href="#"><i class="icon ion-logo-github"></i></a></li>
+            <li><a href="https://github.com/furidngrt"><i class="icon ion-logo-github"></i></a></li>
             <li><a href="https://instagram.com/furidngrt"><i class="icon ion-logo-instagram"></i></a></li>
             <li><a href="#"><i class="icon ion-logo-pinterest"></i></a></li>
           </ul>
